# HaskellStarter

./: .travis.yml  LICENSE  README.md  cabal.config  haskell-starter.cabal  haskellstarter.cabal
executables/: Main.hs
ghciExample/: Goop.hs  Hoop.hs  Joop.hs  README.md
ghciExample/X/: Koop.hs
main/: Main.hs
src/HaskellStarter/: CommitPrinter.hs  Github.hs  Util.hs
test/: DocTest.hs  Main.hs  Properties.hs  UnitTests.hs
