name:                haskell-starter
version:             0.1.0.0
synopsis:            A demo for getting a project started in Haskell.
homepage:            https://github.com/joshcough/HaskellStarter
license:             MIT
license-file:        LICENSE
author:              Josh Cough
maintainer:          joshcough@gmail.com
category:            Demo
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type: git
  location: git@github.com:joshcough/HaskellStarter.git

-- configuration for building a library
library
  hs-source-dirs: src
  exposed-modules:
    HaskellStarter.CommitPrinter
  other-modules:
    HaskellStarter.Util
  build-depends:
    base   >= 4     && < 5,
    github >= 0.7.4 && < 0.8

-- configuration for an executable 
executable githubCommitPrinter
  hs-source-dirs: executables
  main-is: Main.hs
  build-depends: 
    base >= 4 && < 5,
    haskell-starter

-- configuration for Unit tests and properties
test-suite unit-tests-and-properties
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    base                       >= 4   && < 5,
    HUnit                      >= 1.2 && < 1.3,
    QuickCheck                 >= 2.4 && < 2.5,
    test-framework             >= 0.6 && < 0.7,
    test-framework-hunit       >= 0.3 && < 0.4,
    test-framework-quickcheck2 >= 0.2 && < 0.3,
    test-framework-th          >= 0.2 && < 0.3

-- doctests
test-suite doctest
  type:           exitcode-stdio-1.0
  main-is:        DocTest.hs
  hs-source-dirs: test
  build-depends:  
    base    >= 4   && < 5, 
    doctest >= 0.9 && < 0.10, 
    Glob    >= 0.7 && < 0.8
