name:                haskell-starter
version:             0.1.0.0
synopsis:            A demo for getting a project started in Haskell/Cabal.
description:         This project is probably more for learning Cabal right now, but I hope to extend it to Haskell in the future. 
homepage:            https://github.com/joshcough/HaskellStarter
license:             MIT
license-file:        LICENSE
author:              Josh Cough
maintainer:          joshcough@gmail.com
category:            Demo
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/joshcough/HaskellStarter.git

-- configuration for building a library
library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    HaskellStarter.CommitPrinter
  other-modules:
    HaskellStarter.Util
  build-depends:
    base   >= 4.6   && < 5,
    github >= 0.7.4 && < 0.12

-- configuration for an executable 
executable githubCommitPrinter
  default-language: Haskell2010
  hs-source-dirs: executables
  main-is: Main.hs
  build-depends: 
    base >= 4.6 && < 5,
    haskell-starter

-- configuration for Unit tests and properties
test-suite unit-tests-and-properties
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    base                       >= 4.6 && < 5,
    HUnit                      >= 1.2 && < 1.4,
    QuickCheck                 >= 2.4 && < 2.8,
    tasty                      >= 0.10 && < 0.11,
    tasty-hunit                >= 0.9 && < 0.10,
    tasty-quickcheck           >= 0.8 && < 0.9,
    tasty-th                   >= 0.1 && < 0.2

-- doctests
test-suite doctest
  type:           exitcode-stdio-1.0
  main-is:        DocTest.hs
  hs-source-dirs: test
  build-depends:  
    base    >= 4.6 && < 5,
    doctest >= 0.9 && < 0.11,
    Glob    >= 0.7 && < 0.9
